--- a/scss/layout/_news.scss
+++ b/scss/layout/_news.scss
@@ -613,6 +613,18 @@
       }
       & .manage-rows {
         &-swiper {
+          @include flex();
+          & .tablist-inner-body {
+            &:nth-child(1) {
+              padding-right: 20px;
+            }
+            &:nth-child(2) {
+              padding: 0 20px;
+            }
+            &:nth-child(3) {
+              padding-left: 20px;
+            }
+          }
           & .info-small {
             margin-bottom: 10px;
             p {
