--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -86,26 +86,33 @@
   }
   &-inner {
     @include flex();
-    justify-content: space-between;
     margin-bottom: 80px;
-    @include max(1160px) {
-      flex-direction: column;
+    &:nth-child(odd) {
+      & .content-column {
+        &:nth-child(1) {
+          padding-right: 20px;
+        }
+        &:nth-child(2) {
+          padding-left: 20px;
+        }
+      }
     }
-  }
-  &-inner:nth-child(even) {
-    flex-direction: row-reverse;
-    @include max(1160px) {
-      flex-direction: column;
+    &:nth-child(even) {
+      flex-direction: row-reverse;
+      & .content-column {
+        &:nth-child(1) {
+          padding-left: 20px;
+        }
+        &:nth-child(2) {
+          padding-right: 20px;
+        }
+      }
     }
   }
   &-column {
-    max-width: 550px;
     width: 50%;
-    @include max(1160px) {
-      width: 100%;
-      max-width: none;
-      padding-bottom: 20px;
-    }
+    height: 100%;
+    position: relative;
     &-title {
       & p {
         font-size: 22px;
@@ -127,6 +134,28 @@
         }
       }
     }
+    &-img {
+      overflow: hidden;
+      &:hover img {
+        -webkit-transform: scale(1.3);
+        transform: scale(1.3);
+      }
+      & img {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transition: 0.5s ease-in-out;
+        transition: 0.5s ease-in-out;
+      }
+    }
+    & .content-hover-overlay {
+      position: absolute;
+      bottom: 0;
+      height: 100%;
+      width: 20%;
+      overflow: hidden;
+      transition: 0.5s;
+      opacity: 0.5;
+    }
     &-text {
       & p:nth-child(1) {
         margin-bottom: 20px;
@@ -140,29 +169,9 @@
         font-size: 20px;
       }
     }
-    &-img {
-      position: relative;
-      &:hover .content-hover-overlay {
-        width: 20%;
-      }
-    }
     &-form {
       @include flex();
       justify-content: space-between;
-      @include max(1160px) {
-        justify-content: normal;
-      }
-      @include max(430px) {
-        flex-direction: column;
-      }
-    }
-    &-right {
-      @include max(1160px) {
-        margin-left: 20px;
-      }
-      @include max(430px) {
-        margin-left: 0;
-      }
     }
     &-left,
     &-right {
@@ -295,19 +304,6 @@
       }
     }
   }
-  &-hover-overlay {
-    position: absolute;
-    bottom: 0;
-    height: 100%;
-    width: 0;
-    overflow: hidden;
-    transition: 0.5s;
-    opacity: 0.5;
-  }
-}
-
-* {
-  box-sizing: border-box;
 }
 
 .dropdown {
