--- a/scss/layout/_customer.scss
+++ b/scss/layout/_customer.scss
@@ -55,6 +55,7 @@
       background: #fff;
       border-radius: 12px;
       border: 1px solid #f5f5f5;
+      cursor: pointer;
       .customer-img {
         margin-bottom: 20px;
       }
