--- a/scss/layout/_news.scss
+++ b/scss/layout/_news.scss
@@ -1,15 +1,15 @@
 .news {
   &-inner {
-    padding-top: 95px;
+    padding-top: 120px;
     &-row {
       @include flex();
       padding: 0 20px;
-      @include max(1023px) {
+      @include max(1024px) {
         flex-direction: column;
       }
       .news-list {
         padding-right: 15px;
-        @include max(1023px) {
+        @include max(1024px) {
           padding-right: 0;
         }
         & .news-breadcrumb {
@@ -74,7 +74,7 @@
         // }
         > a > p {
           font-size: 26px;
-          @include max(650px) {
+          @include max(700px) {
             font-size: 18px;
           }
         }
@@ -83,15 +83,18 @@
           line-height: 40px;
           color: #544837;
           padding-bottom: 20px;
-          @include max(650px) {
+          @include max(700px) {
             font-size: 30px;
+          }
+          @include max(500px) {
+            font-size: 24px;
           }
         }
         > p {
           padding-bottom: 20px;
           font-weight: 500;
           line-height: 25px;
-          @include max(650px) {
+          @include max(700px) {
             font-size: 12px;
           }
         }
@@ -101,8 +104,11 @@
             line-height: 22px;
             font-weight: 600;
             color: #544837;
+            @include max(500px) {
+              font-size: 14px;
+            }
           }
-          @include max(650px) {
+          @include max(700px) {
             font-size: 15px;
           }
         }
@@ -115,13 +121,16 @@
           font-size: 16px;
           font-weight: 600;
           border-bottom: 1px solid #cfcfcf;
+          @include max(500px) {
+            font-size: 14px;
+          }
         }
         .news-time {
           @include flex();
           align-items: center;
           padding-bottom: 20px;
           justify-content: space-between;
-          @include max(650px) {
+          @include max(700px) {
             p {
               font-size: 14px;
             }
@@ -143,8 +152,16 @@
           align-items: center;
           padding: 15px 0;
           border-bottom: 1px solid #cfcfcf;
+          @include max(700px) {
+            flex-direction: column;
+          }
           & .text {
             width: 10%;
+            @include max(700px) {
+              width: 100%;
+              text-align: center;
+              margin-bottom: 15px;
+            }
             p {
               color: #858585;
             }
@@ -153,18 +170,31 @@
             width: 90%;
             @include flex();
             align-items: center;
+            @include max(700px) {
+              gap: 15px;
+              width: 100%;
+              flex-wrap: wrap;
+              justify-content: center;
+            }
           }
           & .icon {
             @include flex();
             align-items: center;
             gap: 20px;
             width: 40%;
+            @include max(700px) {
+              width: 100%;
+              justify-content: center;
+            }
             img {
               max-width: 30px;
             }
           }
           & .popup-register {
             width: 60%;
+            @include max(700px) {
+              width: 100%;
+            }
             a {
               width: 100%;
               p {
@@ -186,7 +216,7 @@
               transition: opacity 500ms;
               visibility: hidden;
               opacity: 0;
-              z-index: 999;
+              z-index: 1000;
               &:target {
                 visibility: visible;
                 opacity: 1;
@@ -201,6 +231,9 @@
                 bottom: 0;
                 transform: translate(15%, 10%);
                 transition: all 1s ease-in-out;
+                @include max(700px) {
+                  transform: translate(15%, 5%);
+                }
                 &-box {
                   padding: 30px;
                   border-radius: 10px;
@@ -213,6 +246,9 @@
                       width: 100%;
                       font-size: 36px;
                       font-weight: 700;
+                      @include max(700px) {
+                        font-size: 26px;
+                      }
                     }
                     a {
                       width: auto;
@@ -221,13 +257,23 @@
                   & .form-input-box {
                     @include flex();
                     width: 100%;
+                    flex-wrap: wrap;
                     & .form-input {
                       width: 50%;
+                      @include max(700px) {
+                        width: 100%;
+                      }
                       &:nth-child(1) {
                         margin-right: 15px;
+                        @include max(700px) {
+                          margin: 0;
+                        }
                       }
                       &:nth-child(2) {
                         margin-left: 15px;
+                        @include max(700px) {
+                          margin: 0;
+                        }
                       }
                     }
                   }
@@ -272,8 +318,9 @@
           align-items: center;
           margin-top: 20px;
           margin-bottom: 60px;
-          @include max(660px) {
+          @include max(700px) {
             flex-wrap: wrap;
+            margin-bottom: 40px;
           }
           & .tag-link {
             padding-right: 10px;
@@ -318,7 +365,7 @@
         width: 70%;
         height: 100%;
         position: relative;
-        @include max(1023px) {
+        @include max(1024px) {
           width: 100%;
         }
       }
@@ -326,12 +373,12 @@
         width: 30%;
         height: 100%;
         position: relative;
-        @include max(1023px) {
-          width: 100%;
+        @include max(1024px) {
+          display: none;
         }
         & .news-item {
           padding-left: 15px;
-          @include max(1023px) {
+          @include max(1024px) {
             padding-left: 0;
           }
           & .news-demo {
@@ -341,7 +388,7 @@
             & .demo-img {
               position: relative;
               img {
-                @include max(1023px) {
+                @include max(1024px) {
                   max-height: 300px;
                 }
                 @include max(380px) {
@@ -462,7 +509,7 @@
             & .demo-img {
               position: relative;
               img {
-                @include max(1023px) {
+                @include max(1024px) {
                   max-height: 300px;
                 }
               }
@@ -474,6 +521,9 @@
             & .fanpage-like {
               @include flex();
               margin-bottom: 40px;
+              @include max(1070px) {
+                margin-bottom: 30px;
+              }
               @include max(380px) {
                 margin-bottom: 20px;
               }
@@ -490,7 +540,7 @@
             & .fanpage-img {
               position: relative;
               img {
-                @include max(1023px) {
+                @include max(1024px) {
                   max-height: 300px;
                 }
               }
@@ -548,6 +598,9 @@
                       padding: 4px 12px;
                       color: #0060ff;
                       background-color: #eef2ff;
+                      @include max(1070px) {
+                        font-size: 12px;
+                      }
                     }
                     &:nth-child(2) {
                       font-size: 12px;
@@ -598,7 +651,7 @@
   background: linear-gradient(180deg, #ffffff 0%, #eff5ff 100%);
   &-inner {
     padding: 20px 20px 80px 20px;
-    @include max(1023px) {
+    @include max(1024px) {
       padding: 20px 20px 40px 20px;
     }
     &-rows {
@@ -609,20 +662,42 @@
           font-size: 28px;
           font-weight: 700;
           color: #000;
+          @include max(500px) {
+            font-size: 24px;
+          }
         }
       }
       & .manage-rows {
         &-swiper {
           @include flex();
+          @include max(1024px) {
+            flex-wrap: wrap;
+          }
           & .tablist-inner-body {
+            @include max(1024px) {
+              width: 50%;
+            }
+            @include max(700px) {
+              width: 100%;
+              margin-bottom: 40px;
+            }
             &:nth-child(1) {
               padding-right: 20px;
+              @include max(700px) {
+                padding-right: 0;
+              }
             }
             &:nth-child(2) {
               padding: 0 20px;
+              @include max(700px) {
+                padding: 0;
+              }
             }
             &:nth-child(3) {
               padding-left: 20px;
+              @include max(700px) {
+                padding-left: 0;
+              }
             }
           }
           & .info-small {
