--- a/scss/layout/_tab.scss
+++ b/scss/layout/_tab.scss
@@ -80,17 +80,27 @@
         margin-bottom: 30px;
       }
       .tablist-reading {
+        overflow: hidden;
         img {
           width: 100%;
           max-width: unset;
           max-height: 160px;
+          cursor: pointer;
           border-top-left-radius: 10px;
           border-top-right-radius: 10px;
+          -webkit-transform: scale(1);
+          transform: scale(1);
+          -webkit-transition: 0.5s ease-in-out;
+          transition: 0.5s ease-in-out;
           @include max(1024px) {
             max-width: none;
             max-height: none;
           }
         }
+      }
+      &:hover img {
+        -webkit-transform: scale(1.3);
+        transform: scale(1.3);
       }
       .content-small {
         padding: 20px;
