--- a/scss/core/_animation.scss
+++ b/scss/core/_animation.scss
@@ -49,6 +49,7 @@
     transform: scale(1);
   }
 }
+
 @keyframes pulsate-bck {
   0% {
     -webkit-transform: scale(1);
@@ -76,4 +77,10 @@
 @keyframes mover {
   0% { transform: translateY(10px); }
   100% { transform: translateY(-10px); }
+}
+
+@keyframes shine {
+	100% {
+		left: 80%;
+	}
 }
