--- a/scss/layout/_history.scss
+++ b/scss/layout/_history.scss
@@ -104,12 +104,45 @@
       }
     }
     &-prove {
-      p {
-        padding: 20px 0;
-        font-size: 16px;
-        line-height: 28px;
-        @include max(600px) {
-          font-size: 14px;
+      position: relative;
+      & .prove-img {
+        position: relative;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: -75%;
+          z-index: 2;
+          display: block;
+          content: "";
+          width: 50%;
+          height: 100%;
+          background: -webkit-linear-gradient(
+            left,
+            rgba(255, 255, 255, 0) 0%,
+            rgba(255, 255, 255, 0.3) 100%
+          );
+          background: linear-gradient(
+            to right,
+            rgba(255, 255, 255, 0) 0%,
+            rgba(255, 255, 255, 0.3) 100%
+          );
+          -webkit-transform: skewX(-25deg);
+          transform: skewX(-25deg);
+        }
+        &:hover::before {
+          -webkit-animation: shine 0.75s;
+          animation: shine 0.75s;
+        }
+      }
+      & .prove-text {
+        p {
+          padding: 20px 0;
+          font-size: 16px;
+          line-height: 28px;
+          @include max(600px) {
+            font-size: 14px;
+          }
         }
       }
     }
